# ci

./: .gitignore  README.md  lint_local.py  readme.md
.github/workflows/: deploy.yml  jenkins.yml  jenkins_deploy.yml  jenkins_prepare.yml  lint.yml  linter.yml  packer_build.yml  prepare.yml  terraform_apply.yml  terraform_plan.yml  test.yml
ansible/playbooks/: jenkins.yaml
dev/: .gitignore  README.md  determine_shards.py
dev/utils/: db.py  forward.py  net.py  schema.py  utils.py
docker/: plugins.txt
docker/prod/: base_config.yaml
jenkins/: CODEOWNERS  readme.md
jenkins-jobs/prod/: docker-daily.yaml  jenkins_jobs.ini  tvm.yaml
jenkins/docker/: Dockerfile  plugins.txt  run_local.sh
jenkins/jenkins-jobs/: update.sh
jenkins/scripts/: common.sh  pull_terraform_backend.sh  set_trust_on_jobs.py
monitoring/: .gitignore  README.md  ansible.cfg  install.yml
monitoring/fetcher/: Dockerfile  db.py  forward.py  tests_fetcher.py  utils.py
monitoring/files/: docker-compose.yml  grafana.ini  loki-config.yml  prometheus.yml
monitoring/images/: Dockerfile  Dockerfile.tests  db.py  forward.py  net.py  schema.py  (+2 more)
packer/: README.md
scripts/: common.sh  reload.sh
terraform/: .gitignore  .pre-commit-config.yaml  DEPLOYERS.md  README.md  artifacts.tf  autoscalers.tf  ecr.tf  firewall.tf  main.tf  outputs.tf  persistent_agents.tf  sccache.tf  test_ci.py  tvm_bot.tf  variables.tf
terraform/scripts/: pyproject.toml  validate.py
terraform/scripts/tests/: test_validate.py
vendor_ci/: Dockerfile  README.md  gen_api_key.py  requirements.txt  run.sh  server.py
(+111 files in other folders)
