[tool.poetry]
name = "tvm-ci-terraform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "1.55"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
validate = "validate:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
